--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,4 +1,3 @@
-{% extends "index.html" %}
 
 {% block content %}
 
@@ -11,7 +10,7 @@
     <p>Your account doesn't have access to this page. To proceed,
     please login with an account that has access.</p>
   {% else %}
-    <p>Please login to see this page.</p>
+    <p>Please login to see this preage.</p>
   {% endif %}
 {% endif %}
 
