--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,6 +1,4 @@
 
-{% block content %}
-
 {% if form.errors %}
   <p>Your username and password didn't match. Please try again.</p>
 {% endif %}
@@ -10,7 +8,7 @@
     <p>Your account doesn't have access to this page. To proceed,
     please login with an account that has access.</p>
   {% else %}
-    <p>Please login to see this preage.</p>
+    <p>Please login to see this page.</p>
   {% endif %}
 {% endif %}
 
@@ -36,4 +34,8 @@
 {# Assumes you setup the password_reset view in your URLconf #}
 <p><a href="{% url 'password_reset' %}">Lost password?</a></p>
 
-{% endblock %}
+  <form method="post" action="{% url 'register' %}">
+    {% csrf_token %}
+    <button name="submit">register</button>
+    <input type="hidden" name="next" value="{% url 'register' %}" />
+  </form>
