--- a/templates/index.html
+++ b/templates/index.html
@@ -35,6 +35,21 @@ scratch. This page gets rid of all links and provides the needed markup only.
       <li class="nav-item d-none d-sm-inline-block">
         <a href="#" class="nav-link">Contact</a>
       </li>
+        {% if user.is_authenticated %}
+      <li class="nav-item d-none d-sm-inline-block">
+        <a href="#" class="nav-link">Hello, {{ user.username }}</a>
+      </li>
+      <li class="nav-item d-none d-sm-inline-block">
+        <a href="{% url 'logout' %}" class="nav-link">Log out</a>
+      </li>
+      {% else %}
+      <li class="nav-item d-none d-sm-inline-block">
+        <a href="{% url 'register' %}" class="nav-link">Register</a>
+      </li>
+      <li class="nav-item d-none d-sm-inline-block">
+        <a href="{% url 'login' %}" class="nav-link">Log in</a>
+      </li>
+      {% endif %}
     </ul>
 
     <!-- Right navbar links -->
